[package]
name = "vanish"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
